tests/negative/test_data_member_init_wrong_type.orb
data Foo {
    i32 x = 'a';
}

fnc main() {}